--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
         />
 
-        <title>Vite + Svelte</title>
+        <title>Smart Menu</title>
     </head>
     <body>
         <div id="app"></div>
